# msr-utility

./: .gitmodules  CMakeLists.txt  README.md  collect_dll.sh  msr-utility.sln  msr-watchdog.sln  readme.md  strip_exe.sh
asset/: app.manifest  app.rc  resource.h
common/include/: winio.h
common/lib/: WinIo.exp  WinIo.lib  WinRing0x64.lib
common/lib/WinIO/: README.md
common/lib/WinIO/Help/: WinIo.chm
common/src/: winio.cpp  winring0.cpp
include/: winring0.h  xeon_e5v4_msr.h
lib/: WinRing0x64.exp  WinRing0x64.iobj  WinRing0x64.ipdb
lib/libwinring0/: CMakeLists.txt  winring0.c  winring0.h
msr-cmd/: main.cpp  msr-cmd.vcxproj  msr-cmd.vcxproj.filters
msr-watchdog/: E5-2670v3-x2.ini  E5-2670v3.ini  E5-2683v4-QHV3.ini  E5-2697Rv4.ini  Resource.rc  ini_config.h  ini_loader.cpp  main.cpp  mem_regs.cpp  mem_regs.h  msr-regs.ini  msr-watchdog.ini  msr-watchdog.vcxproj  msr-watchdog.vcxproj.filters  msr_regs.cpp  msr_regs.h  v3_turbo.sh  winio.h
src/: main.c  winring0.cpp
winio-drv/: main.cpp  winio-drv.vcxproj  winio-drv.vcxproj.filters
wrmsr/: main.cpp  wrmsr.vcxproj  wrmsr.vcxproj.filters
